--- a/view/index.html
+++ b/view/index.html
@@ -102,6 +102,11 @@
             </div>
 
         </div>
+
+        <div class="container">
+            <input class="w -75 form-control">
+            <button class="btn btn-primary " >Tìm kiếm</button>
+        </div>
         <table class="table">
             <thead>
                 <tr>
